[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/SixCoins.gd" type="Script" id=1]
[ext_resource path="res://source/Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Header.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/Footer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font1.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://source/Success.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/arrow.png" type="Texture" id=7]
[ext_resource path="res://source/Instructions.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/coin.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 20.0001 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_top = 4
extra_spacing_bottom = 4
font_data = ExtResource( 5 )

[node name="SixCoins" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 3 )]
title = "SIX COINS"

[node name="Footer" parent="." instance=ExtResource( 4 )]
credits_link = "https://www.youtube.com/watch?v=_pP_C7HEy3g"

[node name="Body" type="Control" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Body"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.964706, 0.968627, 0.921569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="Body"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 1.52588e-05
margin_bottom = 1.52588e-05
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Border" type="StaticBody2D" parent="Body/Center"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Center/Border"]
position = Vector2( 0, -200 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body/Center/Border"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Body/Center/Border"]
position = Vector2( 320, 100 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Body/Center/Border"]
position = Vector2( -320, 100 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CoinGrid" type="Node2D" parent="Body/Center"]
position = Vector2( 0, 80 )
scale = Vector2( 1.3, 1.3 )

[node name="FreeCoin" parent="Body/Center" instance=ExtResource( 2 )]
visible = false
scale = Vector2( 1.3, 1.3 )

[node name="Rules" type="Node2D" parent="Body/Center"]
position = Vector2( 0, -250 )

[node name="Moves" type="Label" parent="Body/Center/Rules"]
margin_left = -300.0
margin_top = -30.0
margin_right = -100.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.101961, 0.0352941, 0.0509804, 1 )
text = "MOVES
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin1" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( -60, -10 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin2" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( -20, -10 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin3" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 20, -10 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin4" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( -40, 25 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin10" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 180, -30 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin9" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 220, -30 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin12" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 180, 40 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin11" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 220, 40 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin8" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 160, 5 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin5" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin6" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 40, 25 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Coin7" parent="Body/Center/Rules" instance=ExtResource( 2 )]
position = Vector2( 240, 5 )
scale = Vector2( 0.63, 0.63 )
collision_layer = 0
collision_mask = 0

[node name="Arrow" type="Sprite" parent="Body/Center/Rules"]
position = Vector2( 100, -50 )
rotation = 0.785398
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="Instructions" parent="Body/Center" instance=ExtResource( 8 )]
visible = false
z_index = 2
instruction_text = "Slide coins on the surface to form a ring of six.

You may only slide one coin at a time, and it must come to rest while touching AT LEAST two other coins.

What is the least number of moves required?"

[node name="Success" parent="Body/Center" instance=ExtResource( 6 )]

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="instructions_pressed" from="Footer" to="." method="_on_Footer_instructions_pressed"]
